<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">LodeStar</string>
    <string name="app_name_sign_in">LodeStar Sign In</string>
    <string name="app_name_sign_up">LodeStar Sign Up</string>
    <string name="sign_up_email">Sign up using email</string>
    <string name="user_has_account_sign_in">"Already have an account</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_trip">TripActivity</string>
    <string name="user_name">Username</string>
    <string name="user_mail">E-Mail</string>
    <string name="user_password">Password</string>
    <string name="user_retype_password">Retype Password</string>
    <string name="weather_activity">Weather Information</string>
    <string name="today_weather">Today is</string>
    <string name="other_days_weather">Other day</string>
    <string name="weather_feels_like">feels like</string>
    <string name="weather_humidity">humidity</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="VR_AD"><font size="17">\nDo you have VR glasses?\n</font>\n\<font size="13">Tap here to learn how
        to get them\nfor an enhanced LodeStar\nexperience\n</font></string>
    <string name="title_activity_user_login">UserLoginActivity</string>
    <string name="title_activity_tab">TabActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_user_page">UserPage</string>
    <string name="enter_username"><i>Enter Username</i></string>
    <string name="enter_e_mail"><i>Enter E-mail</i></string>
    <string name="enter_password"><i>Enter password</i></string>
    <string name="re_enter_password"><i>Re-Enter password</i></string>
    <string name="title_activity_forgot_password">ForgotPassword</string>
    <string name="forgot_password">Forgot Password</string>

    <string name="user_activity">Me</string>
    <string name="user_trip_logs_count">##</string>
    <string name="user_trip_count">##</string>
    <string name="user_last_trip_to">Miami</string>
    <string name="facebook_app_id">1613576188710987</string>
    <string name="fb_login_protocol_scheme">fb1613576188710987</string>
    <string name="title_activity_search_user">SearchUserActivity</string>
    <string name="places_to_see_activity">Places To See</string>
    <string name="place_name">Place Name</string>
    <string name="place_type">Place Type</string>
    <string name="place_location">Place Location</string>
    <string name="number_of_reviews">Reviews</string>
    <string name="title_activity_change_password">ChangePasswordActivity</string>
    <string name="title_activity_change_user">changeUserActivity</string>
    <string name="place_photo_attribution">Attribution</string>
    <string name="title_activity_manual_destination">ManualDestinationActivity</string>
    <string name="place_number">number</string>
    <string name="review">Review</string>
    <string name="name_surname_dd_mm_yyyy">Name Surname - DD/MM/YYYY</string>

    <string name="write_post_message">Write a Post</string>
    <string name="write_post_title">New Post</string>
    <string name="write_post_cancel">Cancel</string>
    <string name="information_from_www_numbeo_com">Information from www.numbeo.com</string>
    <string name="title_activity_directed_user_page">DirectedUserPage</string>

</resources>