<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/thy_lounge_background">

    <TextView
        android:id="@+id/textSigUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="140dp"
        android:layout_centerHorizontal="true"
        android:text="@string/app_name_sign_in"
        android:textColor="@android:color/background_light"
        android:textSize="32sp"
        />


    <TableLayout
        android:layout_width="250dp"
        android:layout_height="135dp"
        android:layout_centerInParent="true"
        android:background="@drawable/shape_sign_up"
        android:alpha="0.4"
        android:id="@+id/tableLayout3"
        >
        <TableRow>

            <ImageView
                android:scaleType="center"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                app:srcCompat="@drawable/ic_003_user" />
            <EditText
                android:id="@+id/uName2"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:maxLines="1"
                android:textColorHint="@color/cardview_light_background"
                android:hint="@string/enter_username"
                android:maxLength="256"
                android:inputType="textEmailAddress"
                android:shadowColor="@color/colorWhite"
                android:textColor="@color/colorWhite" />

        </TableRow>

        <TableRow>
            <ImageView
                app:srcCompat="@drawable/ic_002_mail"
                android:scaleType="center"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                />

            <EditText
                android:id="@+id/emailEdit2"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:textColorHint="@color/cardview_light_background"
                android:hint="@string/enter_e_mail"
                android:maxLength="100"
                android:maxLines="1"
                android:inputType="textEmailAddress"
                android:textColor="@color/colorWhite" />

        </TableRow>


        <TableRow>

            <ImageView
                app:srcCompat="@drawable/ic_001_key"
                android:scaleType="center"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                />
            <EditText
                android:id="@+id/textPassword2"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:hint="@string/enter_password"
                android:textColorHint="@color/cardview_light_background"
                android:maxLength="100"
                android:maxLines="1"
                android:inputType="textPassword"
                android:textColor="@color/colorWhite" />
        </TableRow>



    </TableLayout>




    <TextView
        android:id="@+id/textSignin2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/RegButton2"
        android:layout_marginTop="13dp"
        android:onClick="Signin2"
        android:text="Forgot Password?"
        android:textAlignment="center"
        android:textColor="@color/colorWhite" />

    <Button
        android:id="@+id/RegButton2"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tableLayout3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:background="#ba2d1d"
        android:onClick="registerButtonMe"
        android:text="Sign In!"
        android:textAllCaps="false"
        android:textColor="@android:color/background_light" />






</RelativeLayout>