<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.CardView
            android:id="@+id/place_general"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/imageViewPlace"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:background="@null"
                    app:srcCompat="@color/colorForestGreen" />

                <TableRow
                    android:id="@+id/expand_first_row"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/imageViewPlace">

                    <TextView
                        android:id="@+id/place_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:text="@string/place_name"
                        android:textSize="24sp" />

                </TableRow>

                <TableRow
                    android:id="@+id/expand_second_row"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/expand_first_row"
                    android:layout_marginTop="3dp">

                    <ImageView
                        android:id="@+id/place_stars_image1"
                        android:layout_width="10dp"
                        android:layout_height="20dp"
                        app:srcCompat="@android:color/holo_orange_dark" />

                    <ImageView
                        android:id="@+id/place_stars_image2"
                        android:layout_width="10dp"
                        android:layout_height="20dp"
                        app:srcCompat="@android:color/holo_blue_dark" />

                    <ImageView
                        android:id="@+id/place_stars_image3"
                        android:layout_width="10dp"
                        android:layout_height="20dp"
                        app:srcCompat="@android:color/holo_green_light" />

                    <ImageView
                        android:id="@+id/place_stars_image4"
                        android:layout_width="10dp"
                        android:layout_height="20dp"
                        app:srcCompat="@android:color/black" />

                    <ImageView
                        android:id="@+id/place_stars_image5"
                        android:layout_width="10dp"
                        android:layout_height="20dp"
                        app:srcCompat="@android:color/holo_red_dark" />

                    <TextView
                        android:id="@+id/place_number_of_reviews"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/number_of_reviews" />

                </TableRow>

                <TableRow
                    android:id="@+id/expand_third_row"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/expand_second_row"
                    android:layout_marginTop="3dp">

                    <ImageView
                        android:id="@+id/place_type_icon"
                        android:layout_width="15dp"
                        android:layout_height="20dp"
                        app:srcCompat="@color/colorPrimaryDark" />

                    <TextView
                        android:id="@+id/place_type"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="12dp"
                        android:layout_marginStart="12dp"
                        android:text="@string/place_type" />

                </TableRow>

                <TableRow
                    android:id="@+id/expand_fourth_row"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/expand_third_row"
                    android:layout_marginTop="3dp">

                    <ImageView
                        android:id="@+id/place_icon"
                        android:layout_width="15dp"
                        android:layout_height="20dp"
                        app:srcCompat="@color/colorRedd" />

                    <TextView
                        android:id="@+id/place_location"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/place_location" />

                </TableRow>


            </RelativeLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/place_panorama_cardview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/place_general">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="150dp">

                <com.lodestarapp.cs491.lodestar.VR.PanoramaView
                    android:id="@+id/layout"
                    android:layout_width="match_parent"
                    android:layout_height="150dp">

                </com.lodestarapp.cs491.lodestar.VR.PanoramaView>

                <ImageView
                    android:id="@+id/vrSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginEnd="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_toLeftOf="@+id/full"
                    android:layout_toStartOf="@+id/full"
                    android:onClick="goVr"
                    app:srcCompat="@drawable/ic_cardboard3" />

                <ImageView
                    android:id="@+id/full"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:onClick="goFullscreen"
                    app:srcCompat="@drawable/ic_fullscreen" />

            </RelativeLayout>

        </android.support.v7.widget.CardView>
    </RelativeLayout>

    <!--<RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <android.support.v7.widget.RecyclerView
            android:id="@+id/places_to_see_expanded_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="8dp" />
    </RelativeLayout>!-->

</android.support.constraint.ConstraintLayout>