<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".DirectedUserPage"
    tools:showIn="@layout/activity_directed_user_page">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="32dp"
        tools:layout_editor_absoluteY="0dp">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar71"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp">

            <TextView
                android:id="@+id/tid1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/user_activity"
                android:textColor="@color/colorWhite"
                android:textSize="20sp" />

        </android.support.v7.widget.Toolbar>

        <android.support.v7.widget.CardView
            android:id="@+id/me_cardview1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/toolbar7"
            android:layout_marginTop="3dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/me_profile_picture1"
                    android:layout_width="104dp"
                    android:layout_height="89dp"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="12dp"
                    android:src="@mipmap/ic_launcher_round" />

                <TextView
                    android:id="@+id/me_realName1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/me_profile_picture1"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    android:text="@string/user_name"
                    android:textColor="#353535"
                    android:textSize="22sp" />

                <TextView
                    android:id="@+id/me_trip_logs1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/me_realName1"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="20dp"
                    android:text="Trip Logs"
                    android:textColor="#353535"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/me_trip1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/me_realName1"
                    android:layout_marginLeft="30dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="20dp"
                    android:text="Trips"
                    android:textColor="#353535"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/me_last_trip1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@+id/me_trip_logs1"
                    android:layout_alignBottom="@+id/me_trip_logs1"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginEnd="30dp"
                    android:layout_marginRight="30dp"
                    android:text="Last Trip"
                    android:textColor="#353535"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/me_trip_logs_count1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/me_trip_logs1"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    android:text="@string/user_trip_logs_count"
                    android:textColor="#353535"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/me_trip_count1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@+id/me_trip_logs_count1"
                    android:layout_alignBottom="@+id/me_trip_logs_count1"
                    android:layout_alignLeft="@+id/me_trip1"
                    android:layout_alignStart="@+id/me_trip1"
                    android:layout_marginLeft="12dp"
                    android:layout_marginStart="12dp"
                    android:textColor="#353535"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/me_last_trip_city1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@+id/me_trip_logs_count1"
                    android:layout_alignBottom="@+id/me_trip_logs_count1"
                    android:layout_alignEnd="@+id/me_last_trip1"
                    android:layout_alignRight="@+id/me_last_trip1"
                    android:layout_marginEnd="18dp"
                    android:layout_marginRight="18dp"
                    android:text="N/A"
                    android:textColor="#353535"
                    android:textSize="18sp" />


            </RelativeLayout>


        </android.support.v7.widget.CardView>


        <android.support.v7.widget.RecyclerView
            android:id="@+id/my_user_page_recycler_view1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/me_cardview1"
            android:scrollbars="vertical"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="64dp" />

        <ProgressBar
            android:id="@+id/user_progress_bar1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true" />


    </RelativeLayout>



</android.support.constraint.ConstraintLayout>